# course-python

./: AGENTS.md  ATTRIBUTIONS.toml  BOOK_STYLE.md  LICENSE  README.ar.md  README.ca.md  README.en.md  README.es.md  README.md  README.sv.md
appendix-algorithms/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md  search_contract.py
appendix-cli-parser/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md  cli_contract.py
appendix-software-design-patterns/: README.md  TRACEABILITY.md  VERIFICATION.md
chapter-01-introduction/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md
chapter-02-variables/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md
chapter-03-lists/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md
chapter-04-dictionaries/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md
chapter-05-sets/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md
chapter-06-tuples/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md
chapter-07-queues/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md
chapter-08-conditionals/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md
chapter-09-input/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md
chapter-10-loops/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md
chapter-11-functions/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md
chapter-12-oop/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md
chapter-13-files/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md
chapter-14-exceptions/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md
chapter-15-modulos/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md
chapter-16-entornos/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md
chapter-17-persistencia/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md
chapter-18-testing/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md
chapter-19-http/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md  bounded_http.py
chapter-20-logging/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md  trusted_logging.py
chapter-21-async/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md  structured_async.py
chapter-22-introspection/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md  chapter_22.py
chapter-23-network-programming/: README.ar.md  README.ca.md  README.es.md  README.md  README.sv.md  TRACEABILITY.md
chapter-24-python-cpp-integration/: README.ar.md  (+5 more)
chapter-24-python-cpp-integration/examples/00-cpp-survival/: CMakeLists.txt  expected_compile_error.cpp
chapter-24-python-cpp-integration/examples/00-cpp-survival/include/: score.hpp
chapter-24-python-cpp-integration/examples/00-cpp-survival/src/: main.cpp  score.cpp
chapter-24-python-cpp-integration/examples/00-cpp-survival/tests/: score_tests.cpp
chapter-24-python-cpp-integration/examples/01-first-extension/: CMakeLists.txt  pyproject.toml
chapter-24-python-cpp-integration/examples/01-first-extension/src/: bindings.cpp
chapter-24-python-cpp-integration/examples/01-first-extension/tests/: test_hello.py
chapter-24-python-cpp-integration/examples/embed-python/: CMakeLists.txt
chapter-24-python-cpp-integration/examples/embed-python/src/: main.cpp
chapter-24-python-cpp-integration/examples/embed-python/strategies/good/: trusted_strategy.py
chapter-24-python-cpp-integration/examples/embed-python/strategies/invalid/: trusted_strategy.py
chapter-24-python-cpp-integration/examples/embed-python/strategies/raises/: trusted_strategy.py
chapter-24-python-cpp-integration/examples/faststats-cpp/: .gitignore  CMakeLists.txt  README.md  constraints-build.txt  pyproject.toml  stubtest.allowlist
chapter-24-python-cpp-integration/examples/faststats-cpp/benchmarks/: benchmark.py
chapter-24-python-cpp-integration/examples/faststats-cpp/cpp/include/faststats_cpp/: core.hpp
chapter-24-python-cpp-integration/examples/faststats-cpp/cpp/src/: bindings.cpp  core.cpp  test_bindings.cpp
chapter-24-python-cpp-integration/examples/faststats-cpp/cpp/tests/: core_tests.cpp
chapter-24-python-cpp-integration/examples/faststats-cpp/python/faststats_cpp/: __init__.py  _native.pyi  _reference.py
chapter-24-python-cpp-integration/examples/faststats-cpp/tests/: test_buffers.py  test_concurrency.py  test_contract.py  test_online.py  test_ownership_callbacks.py  typing_consumer.py  typing_rejections.py
chapter-24-python-cpp-integration/examples/faststats-cpp/tools/: verify_artifacts.py  verify_native.py
chapter-25-python-rust-integration/examples/faststats-rs/: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
chapter-25-python-rust-integration/examples/faststats-rs/benchmarks/: benchmark.py
chapter-25-python-rust-integration/examples/faststats-rs/python/faststats_rs/: __init__.py  __init__.pyi  _native.pyi  _reference.py
chapter-25-python-rust-integration/examples/faststats-rs/src/: domain.rs  lib.rs  test_hooks.rs
chapter-25-python-rust-integration/examples/faststats-rs/tests/: test_boundary.py  test_classes.py  test_parity.py  test_public_api.py  test_threads.py  typing_consumer.py
chapter-25-python-rust-integration/examples/faststats-rs/tools/: verify.py
chapter-28-professional-capstone/examples/order-tracker/: BUILD_INPUTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-build.txt
chapter-28-professional-capstone/examples/order-tracker/src/order_tracker/: __init__.py  __main__.py  cli.py  domain.py  loopback.py  repositories.py  service.py
chapter-28-professional-capstone/examples/order-tracker/tests/: __init__.py  test_artifact_verifier.py  test_cli.py  test_domain.py  test_loopback.py  test_metadata.py  test_repository_contract.py  test_service.py
chapter-28-professional-capstone/examples/order-tracker/tools/: verify_artifact.py
(+450 files in other folders)
