cmake_minimum_required(VERSION 3.20)
project(faststats_cpp VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

option(FASTSTATS_BUILD_TEST_EXTENSION "Build the private concurrency test module" OFF)
option(FASTSTATS_ENABLE_SANITIZERS "Enable ASan and UBSan for autonomous C++ tests" OFF)

find_package(Python REQUIRED COMPONENTS Interpreter Development.Module)
find_package(pybind11 CONFIG REQUIRED)

function(faststats_strict_warnings target)
  if(MSVC)
    target_compile_options(${target} PRIVATE /W4 /WX /permissive-)
  else()
    target_compile_options(${target} PRIVATE -Wall -Wextra -Wpedantic -Werror)
  endif()
endfunction()

add_library(faststats_core STATIC cpp/src/core.cpp)
target_include_directories(faststats_core PUBLIC cpp/include)
set_target_properties(faststats_core PROPERTIES POSITION_INDEPENDENT_CODE ON)
faststats_strict_warnings(faststats_core)

pybind11_add_module(_native MODULE cpp/src/bindings.cpp)
target_link_libraries(_native PRIVATE faststats_core)
faststats_strict_warnings(_native)
install(TARGETS _native LIBRARY DESTINATION faststats_cpp RUNTIME DESTINATION faststats_cpp)

enable_testing()
add_executable(faststats_core_tests cpp/tests/core_tests.cpp)
target_link_libraries(faststats_core_tests PRIVATE faststats_core)
faststats_strict_warnings(faststats_core_tests)
add_test(NAME faststats_core_contract COMMAND faststats_core_tests)

if(FASTSTATS_BUILD_TEST_EXTENSION)
  pybind11_add_module(_faststats_test MODULE cpp/src/test_bindings.cpp)
  target_compile_definitions(_faststats_test PRIVATE FASTSTATS_TEST_HOOKS=1)
  target_link_libraries(_faststats_test PRIVATE faststats_core)
  faststats_strict_warnings(_faststats_test)
endif()

if(FASTSTATS_ENABLE_SANITIZERS)
  if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    foreach(target faststats_core faststats_core_tests)
      target_compile_options(${target} PRIVATE -fsanitize=address,undefined -fno-omit-frame-pointer)
      target_link_options(${target} PRIVATE -fsanitize=address,undefined)
    endforeach()
  else()
    message(STATUS "FASTSTATS_ENABLE_SANITIZERS skipped: GCC/Clang required")
  endif()
endif()
