[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "course-order-tracker"
version = "1.0.0"
description = "A bounded standard-library order tracker for the Python course"
readme = "README.md"
requires-python = ">=3.11"
license = "CC-BY-SA-4.0"
license-files = ["LICENSE"]
authors = [{ name = "Python Course Contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.scripts]
order-tracker = "order_tracker.cli:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
